terraform/aws/ap-northeast-2/pixell-infra/kubectl-manifests/influx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: influx-ingress
  namespace: influx
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:ap-northeast-2:760235743813:certificate/18d5258b-464a-4b9f-a34e-ddbb47bc9888" # ACM 인증서 ARN
    alb.ingress.kubernetes.io/actions.ssl-redirect: >
      {"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301" }}
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation
    - host: influx.aipixell.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: influxdb2-svc
                port:
                  number: 80
